# GRPC-Kotlin-Multiplatform

./: readme.md
.github/workflows/: publish-fork.yml  release.yml
examples/compose-example/gradle/: libs.versions.toml
gradle/: libs.versions.toml
kmp-grpc-core/: build.gradle.kts
kmp-grpc-core/src/androidJvmCommon/kotlin/io/github/timortel/kmpgrpc/core/: Channel.kt
kmp-grpc-core/src/androidJvmCommon/kotlin/io/github/timortel/kmpgrpc/core/internal/: TrustedCertificatesSslSocketFactory.kt
kmp-grpc-core/src/androidMain/kotlin/io/github/timortel/kmpgrpc/core/: Channel.kt
kmp-grpc-core/src/jsTargetCommon/kotlin/io/github/timortel/kmpgrpc/core/rpc/: rpcimplementation.kt
kmp-grpc-core/src/nativeMain/kotlin/io/github/timortel/kmpgrpc/core/: Channel.kt
kmp-grpc-internal-test/: build.gradle.kts
kmp-grpc-internal-test/src/commonMain/proto/proto2/: proto2-required-fields.proto
kmp-grpc-internal-test/src/commonTest/kotlin/io/github/timortel/kotlin_multiplatform_grpc_plugin/test/: defaults.kt
kmp-grpc-internal-test/src/jvmMacOsTest/kotlin/: DefaultCertificatesRpcTest.kt
kmp-grpc-native/: Cargo.toml  compile.sh  genlicensetexts.sh
kmp-grpc-native/src/: cinterop.rs
kmp-grpc-plugin/src/main/java/io/github/timortel/kmpgrpc/plugin/: GenerateKmpGrpcSourcesTask.kt  KmpGrpcExtension.kt  NamingStrategy.kt
kmp-grpc-plugin/src/test/java/io/github/timortel/kotlin_multiplatform_grpc_plugin/modeltree/: DeclarationClashTest.kt  DefaultEnumValueTest.kt
kmp-grpc-wellknown-ext/src/commonMain/kotlin/io/github/timortel/kmpgrpc/wkt/ext/: Any.kt
(+17 files in other folders)
