[package]
name = "kmp-grpc-native"
version = "0.1.0"
edition = "2024"

license = "Apache-2.0"

[dependencies]
tonic = { version = "0.14.5", features = ["channel", "tls-ring", "tls-webpki-roots"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
rustls-webpki = "0.103.9"
bytes = "1.11.1"
once_cell = "1.21.3"
log = "0.4.29"
env_logger = "0.11.9"

[lib]
crate-type = ["staticlib"]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1